# ansible-role-edge-server

./: .ansible-lint  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  inventory.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: checks.yml  publish.yml  release.yml
edge-server/: README.md
edge-server/defaults/: main.yml
edge-server/files/etc/docker/: daemon.amd64.json  daemon.arm64.json
edge-server/files/etc/systemd/system/: greengrass.service
edge-server/files/opt/: Dockerfile  docker-compose.portainer.yml  gpu.conf  jetson.conf  jtop.chart.py  jtop.conf
edge-server/handlers/: main.yml
edge-server/meta/: main.yml
edge-server/tasks/: apt-upgrade.yml  apt.yml  delete-images.yml  docker.yml  facts.yml  gg.yml  gpu.yml  install-compose.yml  jetson.yml  main.yml  manager.yml  monitoring.yml  mvs.yml  nfs.yml  nvidia.yml  portainer.yml  sep_deployment.yml  static-ip.yml  update-docker-compose.yml
edge-server/templates/: ssh_config  static-ip-config.yml
edge-server/templates/opt/: .env  docker-compose.manager.yml  portainer-pass
edge-server/templates/opt/stacks/netdata/: docker-compose.yml
edge-server/tests/: Makefile  README.md  Vagrantfile  ansible.cfg  inventory.yml  playbook.yml
edge-server/tests/loggerv3/: README.md  docker-compose.yml
edge-server/tests/loggerv3/netdataconfig/netdata/: .environment  go.d.conf  health_alarm_notify.conf  (+1 more)
edge-server/vars/: main.yml
monitoring/: Dockerfile.netdata  Makefile  extract_version.py
(+18 files in other folders)
