[tool.poetry]
version =  "1.1.1"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
version_pattern = [
    "README.md:^  cachuperia/ansible-role-edge-server:v{version}"
]
upload_to_pypi = false
upload_to_release = false
commit_subject = "chore(release): {version}  [skip actions]"
